# OpenMP-LBP-Implementation-for-Face-Similarity

./: CMakeCache.txt  CMakeLists.txt  IO_test.c  Makefile  README.md  cmake_install.cmake  index.html  lbp_omp.c  lbp_seq.c  mat.out  script.js  server.py  style.css  test_openmp.c
